# tb-python-super-portfolio

./: Dockerfile  README.md  dev-requirements.txt  manage.py  pyproject.toml  requirements.txt  setup.cfg
database/: 01_create_database.sql
projects/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project.py  0003_certifyinginstitution_certificate.py
projects/templates/: profile_detail.html
super_portfolio/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_auth.py  test_certifying_institutions.py  test_profiles.py  test_projects.py
